[package]
name = "yuanyu-gear-academy"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd ={ git ="https://github.com/gear-tech/gear.git", tag = "v1.4.1" }
[build-dependencies]
gear-wasm-builder ={ git ="https://github.com/gear-tech/gear.git",tag ="v1.4.1" }
pebbles-game-io.path = "io"
[dev-dependencies]
gmeta = { git ="https://github.com/gear-tech/gear.git", tag ="v1.4.1" }
pebbles-game-io.path = "io"
